# claude-plus-plus

./: .gitattributes  .gitignore  README.md  build-release.bat  build.bat  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  macos-dmg.yml  release-installers.yml
.workbench/: reademe.md  readme.md
.workbench/doc/: ccs2claude-project-map.md  claude-plus-plus-project-map.md  workbench-longterm-doc-registry.md
.workbench/governance/: 2026-05-31-claude-desktop-localization.md  (+112 more)
src/: App.css  App.tsx  appConstants.ts  appTypes.ts  previewCommands.ts  routeStatus.ts  tauriClient.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/claude-zh/: frontend-hardcoded-zh-CN.json  frontend-hardcoded-zh-HK.json  frontend-hardcoded-zh-TW.json  frontend-visible-overrides-zh-CN.json  frontend-zh-CN.json  frontend-zh-HK.json  frontend-zh-TW.json  metadata-zh-CN.json
src-tauri/resources/nsis/: SimpChinese.nsh
src-tauri/src/: ccswitch_db.rs  cd_config.rs  claude_desktop.rs  claude_enhance.rs  claude_patch_common.rs  claude_skills.rs  claude_zh.rs  constants.rs  developer_settings.rs  diagnostics.rs  github_release.rs  lib.rs  main.rs  net_utils.rs  paths.rs  proxy.rs  server.rs  settings.rs  welcome.rs
src-tauri/src/claude_enhance/: enhance_asar.rs  enhance_bridge_ops.rs  enhance_bridge_scripts.rs  enhance_injected.rs
src-tauri/src/claude_enhance/imp/: enhance_tests.rs
src/pages/: AboutPage.tsx  (+6 more)
(+13 files in other folders)
